--- a/premedia/edetailers/scss/sections/certifications.scss
+++ b/premedia/edetailers/scss/sections/certifications.scss
@@ -5,7 +5,7 @@
 	.section-title {
 		margin-bottom: 5em;
 	}
-	.desktop-buttons {
+	.desktop {
 		.column {
 			width: 33%;
 			.cert-logo-container {
